<resources>
    <string name="app_name">Food Recipe</string>
    <string name="food_list">Food List</string>
    <string name="content_description">TODO</string>
    <string name="hello_human">Hello Human</string>
    <string name="quotes"><font color='black'>Make your own food,\nstay at </font><font color='#fdd835'>Home!</font></string>
    <string name="search_any_recipe">Search Any Recipe</string>
    <string name="categories">Categories</string>
    <string name="watch_on_youtube">Watch On Youtube</string>
    <string name="source">Source</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
</resources>
